syntax = "proto3";

package proto;

option java_multiple_files = true;
option java_package = "dev.twelveoclock.worldeditblockparticles.proto";
option java_outer_classname = "ParticlesData";

message BlockParticles{
  uint32 tickRate = 1;
  UUID worldUUID = 2;
  repeated BlockParticle blockParticles = 3;
}

message UUID {
  uint64 mostSigBits = 1;
  uint64 leastSigBits = 2;
}

message BlockParticle {
  uint64 blockPositionBitMask = 1;
  Particle particle = 2;
  uint32 count = 3;
}

enum Particle {
  PARTICLE_ASH = 0;
  PARTICLE_BLOCK_CRACK = 1;
  PARTICLE_BLOCK_DUST = 2;
  PARTICLE_BLOCK_MARKER = 3;
  PARTICLE_BUBBLE_COLUMN_UP = 4;
  PARTICLE_BUBBLE_POP = 5;
  PARTICLE_CAMPFIRE_COSY_SMOKE = 6;
  PARTICLE_CAMPFIRE_SIGNAL_SMOKE = 7;
  PARTICLE_CHERRY_LEAVES = 8;
  PARTICLE_CLOUD = 9;
  PARTICLE_COMPOSTER = 10;
  PARTICLE_CRIMSON_SPORE = 11;
  PARTICLE_CRIT = 12;
  PARTICLE_CURRENT_DOWN = 13;
  PARTICLE_DAMAGE_INDICATOR = 14;
  PARTICLE_DOLPHIN = 15;
  PARTICLE_DRAGON_BREATH = 16;
  PARTICLE_DRIP_LAVA = 17;
  PARTICLE_DRIP_WATER = 18;
  PARTICLE_DRIPPING_DRIPSTONE_LAVA = 19;
  PARTICLE_DRIPPING_DRIPSTONE_WATER = 20;
  PARTICLE_DRIPPING_HONEY = 21;
  PARTICLE_DRIPPING_OBSIDIAN_TEAR = 22;
  PARTICLE_DUST_COLOR_TRANSITION = 23;
  PARTICLE_DUST_PLUME = 24;
  PARTICLE_EGG_CRACK = 25;
  PARTICLE_ELECTRIC_SPARK = 26;
  PARTICLE_ENCHANTMENT_TABLE = 27;
  PARTICLE_END_ROD = 28;
  PARTICLE_EXPLOSION_HUGE = 29;
  PARTICLE_EXPLOSION_LARGE = 30;
  PARTICLE_EXPLOSION_NORMAL = 31;
  PARTICLE_FALLING_DRIPSTONE_LAVA = 32;
  PARTICLE_FALLING_DRIPSTONE_WATER = 33;
  PARTICLE_FALLING_DUST = 34;
  PARTICLE_FALLING_HONEY = 35;
  PARTICLE_FALLING_LAVA = 36;
  PARTICLE_FALLING_NECTAR = 37;
  PARTICLE_FALLING_OBSIDIAN_TEAR = 38;
  PARTICLE_FALLING_SPORE_BLOSSOM = 39;
  PARTICLE_FALLING_WATER = 40;
  PARTICLE_FIREWORKS_SPARK = 41;
  PARTICLE_FLAME = 42;
  PARTICLE_FLASH = 43;
  PARTICLE_GLOW = 44;
  PARTICLE_GLOW_SQUID_INK = 45;
  PARTICLE_GUST = 46;
  PARTICLE_GUST_DUST = 47;
  PARTICLE_GUST_EMITTER = 48;
  PARTICLE_HEART = 49;
  PARTICLE_ITEM_CRACK  = 50;
  PARTICLE_LANDING_HONEY = 51;
  PARTICLE_LANDING_LAVA = 52;
  PARTICLE_LANDING_OBSIDIAN_TEAR = 53;
  PARTICLE_LAVA = 54;
  PARTICLE_LEGACY_BLOCK_CRACK = 55;
  PARTICLE_LEGACY_BLOCK_DUST = 56;
  PARTICLE_LEGACY_FALLING_DUST = 57;
  PARTICLE_MOB_APPEARANCE = 58;
  PARTICLE_NAUTILUS = 59;
  PARTICLE_NOTE = 60;
  PARTICLE_PORTAL = 61;
  PARTICLE_REDSTONE = 62;
  PARTICLE_REVERSE_PORTAL = 63;
  PARTICLE_SCRAPE = 64;
  PARTICLE_SCULK_CHARGE = 65;
  PARTICLE_SCULK_CHARGE_POP = 66;
  PARTICLE_SHRIEK = 67;
  PARTICLE_SLIME = 68;
  PARTICLE_SMALL_FLAME = 69;
  PARTICLE_SMOKE_LARGE = 70;
  PARTICLE_SMOKE_NORMAL = 71;
  PARTICLE_NORMAL = 72;
  PARTICLE_SNEEZE = 73;
  PARTICLE_SNOW_SHOVEL = 74;
  PARTICLE_SNOWBALL = 75;
  PARTICLE_SONICFLAKE = 76;
  PARTICLE_SOUL = 77;
  PARTICLE_SOUL_FIRE_FLAME = 78;
  PARTICLE_SPELL = 79;
  PARTICLE_SPELL_INSTANT = 80;
  PARTICLE_SPELL_MOB = 81;
  PARTICLE_SPELL_MOB_AMBIENT = 82;
  PARTICLE_SPELL_WITCH = 83;
  PARTICLE_SPIT = 84;
  PARTICLE_SPORE_BLOSSOM_AIR = 85;
  PARTICLE_SQUID_INK = 86;
  PARTICLE_SUSPENDED = 87;
  PARTICLE_SUSPENDED_DEPTH = 88;
  PARTICLE_SWEEP_ATTACK = 89;
  PARTICLE_TOTEM = 90;
  PARTICLE_TOWN_AURA = 91;
  PARTICLE_TRIAL_SPAWNER_DETECTION = 92;
  PARTICLE_VIBRATION = 93;
  PARTICLE_VILLAGER_ANGRY = 94;
  PARTICLE_VILLAGER_HAPPY = 95;
  PARTICLE_WARPED_SPORE = 96;
  PARTICLE_WATER_BUBBLE = 97;
  PARTICLE_WATER_DROP = 98;
  PARTICLE_WATER_SPLASH = 99;
  PARTICLE_WATER_WAKE = 100;
  PARTICLE_WAX_OFF = 101;
  PARTICLE_WAX_ON = 102;
  PARTICLE_WHITE_ASH = 103;
  PARTICLE_WHITE_SMOKE = 104;
}